<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_by_bus"
        android:icon="@drawable/ic_directions_bus_black_24dp"
        android:title="@string/by_bus" />

    <item
        android:id="@+id/navigation_search_bus"
        android:icon="@drawable/ic_find_in_page_black_24dp"
       android:title="@string/query" />

    <item
        android:id="@+id/navigation_arrive_station"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/arrive_station" />

    <item
        android:id="@+id/navigation_where_go"
        android:icon="@drawable/ic_directions_walk_black_24dp"
        android:title="@string/where_go" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/me" />


</menu>
