<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:orientation="vertical"
    android:padding="@dimen/standard_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_color_white_stroke_primary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/half_button"
            android:layout_height="@dimen/half_button"
            android:layout_marginLeft="@dimen/standard_margin"
            android:background="@drawable/ic_phone_android_black_24dp" />

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/please_input_phone_num"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="@dimen/standard_margin" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:background="@drawable/bg_color_white_stroke_primary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/half_button"
            android:layout_height="@dimen/half_button"
            android:layout_marginLeft="@dimen/standard_margin"
            android:background="@drawable/ic_lock_black_24dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/please_input_password"
            android:imeActionLabel="登录"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/standard_margin" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:background="@drawable/bg_color_white_stroke_primary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/half_button"
            android:layout_height="@dimen/half_button"
            android:layout_marginLeft="@dimen/standard_margin"
            android:background="@drawable/ic_beenhere_black_24dp" />

        <EditText
            android:id="@+id/et_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/please_input_verify_code"
            android:imeActionLabel="登录"
            android:imeOptions="actionUnspecified"
            android:inputType="number"
            android:maxLines="1"
            android:padding="@dimen/standard_margin" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_get_verify_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:background="@drawable/bg_color_blue"
        android:text="@string/fetch_verify_code"
        android:textColor="@color/white"
        android:textSize="@dimen/subhead" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/bt_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_color_green"
        android:text="@string/complete"
        android:textSize="@dimen/subhead" />

</LinearLayout>
